<resources>
    <string name="app_name">Decred Address Scanner</string>
    <string name="get_address_view_scan_button">Scan QR</string>
    <string name="get_address_view_paste">Paste from clipboard</string>
    <string name="get_address_fragment_no_clipboard_data">nothing to paste</string>
    <string name="view_address_fragment_invalid_address">address is invalid</string>
    <string name="view_address_fragment_no_connection">no connection</string>
    <string name="view_address_fragment_copied_clipdata">Copied to clipboard.</string>
    <string name="view_address_fragment_edit_text">Add label</string>
    <string name="view_address_fragment_balance">Balance: </string>
    <string name="ok">OK</string>
    <string name="no_thanks">No Thanks</string>
    <string name="cancel">Cancel</string>
    <string name="main_view_deleted_address">Address deleted</string>
    <string name="main_view_undo_delete">UNDO</string>
    <string name="permission">Permission</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="scan_info">Scan a QRCode to retrieve a Decred address</string>
    <string name="read_barcode">Read QR Code</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="changed_amounts_many">Some amounts have changed.</string>
    <string name="changed_amounts_one">%1$s has changed by %2$s</string>
    <string name="changed_amounts_notification_title">Decred balance change</string>
    <string name="channel_name">Decred Notifications</string>
    <string name="channel_description">Decred balance change notification channel</string>
    <string name="updates_on">Notifications have been turned on for </string>
    <string name="updates_off">Notifications have been turned off for </string>
    <string name="app_label">DCR Scan</string>
    <string name="menu_about">About</string>
    <string name="menu_about_details">"Version: %s\nDetails: Decred address scanner scans addresses, shows their unspent balance, and any change within the last 24 hours. Star an address to receive notifications of balance changes. If a txid or txid json is used as input, that tx will be assumed a ticket and the commitment script along with ticket status will be watched."</string>
    <string name="menu_set_explorer">Set Explorer</string>
    <string name="menu_dcrdata_mainnet">Dcrdata MainNet</string>
    <string name="menu_dcrdata_testnet">Dcrdata TestNet</string>
    <string name="menu_cfilters">Use CFilters (experimental)</string>
    <string name="other">Other</string>
    <string name="menu_other_description">Enter an url.</string>
    <string name="dcrdata_warning_alert_title">Warning!</string>
    <string name="dcrdata_warning_alert_details">Addresses and/or ticket transaction IDs will be sent over the Internet to dcrdata.org in order to fetch balances and statuses. A bad actor may be able to spy on you and link together parts of your transaction history. This is a privacy concern. Only continue if you accept the risks.</string>
    <string name="dcrdata_warning_alert_ok">Continue</string>
    <string name="dcrdata_warning_alert_stop">Stop</string>
</resources>
